I fix it again because it look good on Iphone17 but not in IPhone 13

--- a/styles/habitTracker.css
+++ b/styles/habitTracker.css
@@ -207,7 +207,7 @@ label {
 }
 
 /* Responsive design */
-@media (max-width: 768px){
+@media (max-width: 600px){
 
     body {
       padding: 10px;
