--- a/styles/libraryOfProblems.css
+++ b/styles/libraryOfProblems.css
@@ -126,7 +126,7 @@ a:hover {
     width: 80%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   body {
         padding: 10px;
   }
