--- a/styles/view-progress.css
+++ b/styles/view-progress.css
@@ -124,7 +124,7 @@ a:hover {
     border-radius: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
 
   body {
         padding: 10px;
